[package]
name = "most-frequent"
version = "0.1.0"
authors = ["st1page"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.8"
libaio-futures = "0.2.2"
nix = "0.20.0"
libc = "0.2.81"
uring-positioned-io = { path = "./uring-positioned-io" }